<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/hello_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/muli"
        android:text="@string/hello_there"
        android:textColor="#232847"
        android:textSize="28sp"/>

    <TextView
        android:id="@+id/click_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/muli"
        android:text="@string/click_to_proceed"
        android:textColor="#7F8188"
        android:textSize="20sp"/>

    <ImageView
        android:id="@+id/get_started_img"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/login"/>



    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="25dp"
        android:background="#42A5F5"
        android:elevation="10dp"
        android:fontFamily="@font/muli"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/muli"
        android:text="@string/don_t_have_an_account"
        android:textColor="#7F8188"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/signup_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:fontFamily="@font/muli"
        android:text="@string/sign_up_txt"
        android:textSize="18sp"
        android:textColor="#42A5F5" />

</LinearLayout>

</LinearLayout>